# Machine_Learning_projects

./: README.md
FN/: pyproject.toml
FN/Loan_status prediction/: loan_sts_pred.ipynb
FN/Regression_model/: sales.ipynb
FN/eye_diseases_prediction/: eye_disease_pred.ipynb
Loan_status prediction/: loan_sts.pkl  loan_sts_pred.ipynb
Regression_model/: sales.ipynb
eye_diseases_prediction/: eye_disease_pred.ipynb
