[tool.poetry]
name = "fn"
version = "0.1.0"
description = ""
authors = ["Mowlidharan07 <mowlidharan@trysimmer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
nbformat = "^5.10.4"
scikit-learn = "^1.4.2"
flask = "^3.0.3"
opencv-python = "^4.9.0.80"
tensorflow = "^2.16.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
xgboost = "^2.0.3"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchmetrics = "^1.4.0.post0"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
